--- a/OlySmart/WebContent/CSS/NewFile.css
+++ b/OlySmart/WebContent/CSS/NewFile.css
@@ -6,22 +6,29 @@
 
 }
 
+body {
+	background-color: yellow;
+}
+
+
 /*INTESTAZIONE*/
 #intestazione{
 	width:100%;
   padding-top: 2rem;
   background:white;
+  margin:0;
+ 
 }
 
 #intestazione .container{
-
   display: flex;
   align-items: center;
-  justify-content:space-between;
+  
   
 }
 #intestazione .container .testo {
-  width:34%;
+  width:60%;
+ 
 }
 #intestazione .container .testo h1 {
   color: black;
@@ -33,119 +40,47 @@
 }
 
 #intestazione .container .image{
-  margin-right: 10rem; 
-  margin-left: 3rem;
-  width:33%;
+ width:20%;
+ 
+ 
   
 }
 #intestazione .container .image .logo{
-  width: 300px;
+  width: 100%;
    padding:0rem;
-  height: 230px;
+  height: 100%;
    
 }
 #intestazione .container .ultimo{
-  width: 33%;
-  
-  
+  width: 20%;
 }
 #intestazione .container .ultimo .accesso{
-  width:100%;
+   width:10%;
   display:flex;
 	align-items:center;
 	text-align:center;
 	justify-content:center;
- margin-bottom:1rem;
-
+	margin-bottom:1rem;
 }
 
 #intestazione .container .ultimo .accesso .registra {
-	width:25%;
-	align-items:center;
-  justify-content:center;
-  text-align:center;
-  
+	margin-right:1rem;
 }
 #intestazione .container .ultimo .accesso .accedi {
-	width:25%;
-	align-items:center;
-  justify-content:center;
-  text-align:center;
-
-}
-#intestazione .container .ultimo .accesso .Myaccount{
-	width:30%;
-	height:50%;
-	align-items:center;
-  justify-content:center;
-  text-align:center;
-
-	
-}
-
-#intestazioe .container .ultimo .accesso .logout{
-	width:20%;
-    height:50%;
-	align-items:center;
-  justify-content:center;
-  text-align:center;
-	
-}
-
-#intestazione .container .ultimo .accesso .Myorder{
-   width:30%;
-   height:50%;
-	align-items:center;
-  justify-content:center;
-  text-align:center;
-	
-}
-#intestazione .container .ultimo .accesso .cartimage{
-    width:10%;
-    height:50%;
-  justify-content:center;
-  
-}
-
-#intestazione .container .ultimo .accesso .cartimage img{
-	width:100%;
+	margin-left:1rem;
 }
 
 #intestazione .container .ultimo .loghi{
-	width:100%;
+    width:10%;
+  justify-content:center;
 	display:flex;
-	
-	justify-content:center;
-	
-	
+	align-items:center;
 }
 
-#intestazione .container .ultimo .loghi .imgl1{
+#intestazione .container .ultimo .loghi img{
 	width:10%;
   margin-left: 1rem;
 }
-#intestazione .container .ultimo .loghi .imgl1 img{
-	width:100%;
-}
-#intestazione .container .ultimo .loghi .imgl2{
-	width:10%;
-  margin-left: 1rem;
-}
-#intestazione .container .ultimo .loghi .imgl2 img{
-	width:100%;
-}
-#intestazione .container .ultimo .loghi .imgl3{
-	width:10%;
-  margin-left: 1rem;
-}
-#intestazione .container .ultimo .loghi .imgl3 img{
-	width:100%;
-}
-
-#intestazione .mobile-container{
-  display: none;
-}
-
 
 /*bottone ricerca*/
 .bottone-ricerca{
@@ -207,11 +142,9 @@
 
 /*prodotti più venduti*/
 #piuvenduti{
-  margin-left: 2rem;
+  width:100%;
   margin-top: 8rem;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+ 
 }
 
 #piuvenduti p{
@@ -220,22 +153,16 @@
 }
 
 #piuvenduti table{
-  margin-left: auto;
-  margin-right: auto;   
-}
-#piuvenduti table td{
-  padding-right: 2rem;
+	width:100%;
+   
 }
 
 .container {
-  position: relative;
+ 
   width: 100%;
 }
 
-.container .image{
-	width:250px;
-	height:250px;
-}
+
 .overlay {
   position: absolute;
   bottom: 0;
@@ -314,7 +241,7 @@ font-size: 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-
+  margin:auto;
 }
 
 .sidebar .nav-links li a{
@@ -548,8 +475,7 @@ opacity: 1;
   margin-top: 10rem;
   background: #4d4d4d;
   color: #fff;
-  padding-top:30px;
-  padding-bottom:30px;
+  padding: 30px;
   text-align: center;
 }
 
