--- a/OlySmart/WebContent/CSS/styleadmin.css
+++ b/OlySmart/WebContent/CSS/styleadmin.css
@@ -1,64 +1,85 @@
 *{
-    margin: 0;
-    padding: 0;
- 
- }
- a{
+	margin:0;
+	padding:0;
+}
+a{
     color:white;
     text-decoration: none;
 }
- #navbar{
-    background: #4d4d4d;
+header{
+	width:100%;
+	
 }
-#navbar .container{
-    display: flex;
-    
-    align-items: center;
+
+header #navbar{
+	width:100%;
+	display:flex;
+	background: #4d4d4d;
 }
-#navbar .container ul{
-    display: flex;
-    
-} 
-#navbar .container ul li {
-    list-style: none;
-    margin-left: 2rem;
+
+header #navbar .container{
+	width:100%;
+	display:flex;
+	
 }
-#navbar .container ul .right{
-    margin-left: 66rem;
+
+header #navbar .container h1{
+	width:80%;
+	
+	
 }
-#navbar .container ul li a{
-    padding: 15px;
-    display: block;
+
+header #navbar .container ul{
+	width:20%;
+	display:flex;
+	float:right;
+	align-items:center;
+	text-align:center;
+	justify-content:center;
+	
 }
-#navbar ul li a:hover,
-#navbar ul li a.current{
+
+header #navbar .container ul li{
+	width:50%;
+	list-style: none;
+	margin-right:3rem;
+	
+}
+
+header #navbar .container ul li a{
+	display:block;
+}
+
+header #navbar .container ul li a:hover,
+header #navbar .container ul li a.current{
     background:#555;
     color:white;
 
 }
-#navbar .container h1{
-    padding-left: 1rem ;
-} 
-
 #menu{
-align-items: center;
-}
-#menu .primo {
-    margin-left: 30rem;
-    margin-top: 10rem;
-}
-#menu .secondo{
-    margin-left: 40rem;
-}
-#menu table tr td{
-    width: 300px;
-    height: 300px;
-    align-items: center;
+	width:100%;	
+	
 }
 
-#menu table  tr td img{
-    width: 275px;
-    height: 250px;
+#menu table{
+	width:50%;
+margin-left: auto;
+  margin-right: auto;	
+}
+ #menu table tr{
+width:100%;	
+}
+
+#menu table .primo td{
+	width:33%;
+}
+
+#menu table .secondo td{
+	width:50%;
+}
+#menu table tr td img{
+	width:225px;
+	height:200px;
 }
 
 a{
