--- a/OlySmart/WebContent/CSS/stylecata.css
+++ b/OlySmart/WebContent/CSS/stylecata.css
@@ -14,7 +14,6 @@
 }
 
 #intestazione .container{
-
   display: flex;
   align-items: center;
   justify-content:space-between;
@@ -46,100 +45,32 @@
 }
 #intestazione .container .ultimo{
   width: 33%;
-  
-  
 }
 #intestazione .container .ultimo .accesso{
-  width:100%;
+
   display:flex;
 	align-items:center;
 	text-align:center;
 	justify-content:center;
- margin-bottom:1rem;
-
+	margin-bottom:1rem;
 }
 
 #intestazione .container .ultimo .accesso .registra {
-	width:25%;
-	align-items:center;
-  justify-content:center;
-  text-align:center;
-  
+	margin-right:1rem;
 }
 #intestazione .container .ultimo .accesso .accedi {
-	width:25%;
-	align-items:center;
-  justify-content:center;
-  text-align:center;
-
-}
-#intestazione .container .ultimo .accesso .Myaccount{
-	width:30%;
-	height:50%;
-	align-items:center;
-  justify-content:center;
-  text-align:center;
-
-	
-}
-
-#intestazioe .container .ultimo .accesso .logout{
-	width:20%;
-    height:50%;
-	align-items:center;
-  justify-content:center;
-  text-align:center;
-	
-}
-
-#intestazione .container .ultimo .accesso .Myorder{
-   width:30%;
-   height:50%;
-	align-items:center;
-  justify-content:center;
-  text-align:center;
-	
-}
-#intestazione .container .ultimo .accesso .cartimage{
-    width:10%;
-    height:50%;
-  justify-content:center;
-  
-}
-
-#intestazione .container .ultimo .accesso .cartimage img{
-	width:100%;
+	margin-left:1rem;
 }
 
 #intestazione .container .ultimo .loghi{
-	width:100%;
+	display:block;
+  justify-content:center;
 	display:flex;
-	
-	justify-content:center;
-	
-	
+	align-items:center;
 }
 
-#intestazione .container .ultimo .loghi .imgl1{
-	width:10%;
+#intestazione .container .ultimo .loghi img{
   margin-left: 1rem;
-}
-#intestazione .container .ultimo .loghi .imgl1 img{
-	width:100%;
-}
-#intestazione .container .ultimo .loghi .imgl2{
-	width:10%;
-  margin-left: 1rem;
-}
-#intestazione .container .ultimo .loghi .imgl2 img{
-	width:100%;
-}
-#intestazione .container .ultimo .loghi .imgl3{
-	width:10%;
-  margin-left: 1rem;
-}
-#intestazione .container .ultimo .loghi .imgl3 img{
-	width:100%;
 }
 
 #intestazione .mobile-container{
@@ -205,80 +136,20 @@
 }
 
 
-/*prodotti più venduti*/
-#piuvenduti{
-  margin-left: 2rem;
-  margin-top: 8rem;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-
-#piuvenduti p{
-  margin-bottom: 2rem;
-  font-size: 3rem;
-}
-
-#piuvenduti table{
-  margin-left: auto;
-  margin-right: auto;   
-}
-#piuvenduti table td{
-  padding-right: 2rem;
-}
-
-.container {
-  position: relative;
-  width: 100%;
-}
-
-.container .image{
-	width:250px;
-	height:250px;
-}
-.overlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: #008CBA;
-  overflow: hidden;
-  width: 100%;
-  height: 0;
-  transition: .5s ease;
-
-}
-
-.container:hover .overlay {
-  height: 100%;
-  
-}
-
-.text {
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
 /*MENU*/
 #menu{
-  margin-top:5rem;
   width:100%;
-  display: flex;
-  height: 500px;
+  display:block;
+  
   align-items:center;
-  justify-content:center;
+  justify-content:space-between;
 }
 .sidebar{
-
+  position:absolute;
  
   background: #d9dcdf;
   height: 480px;
+  margin-top: 2rem;
   width: 20%;
   z-index: 1;
   text-align: center;
@@ -418,139 +289,68 @@ opacity: 1;
 }
 
 
+/*prodotti*/
 
-/*SLIDER*/
-.slider{
-  height: 500px;
-  width: 64%;
-  display: flex;
+.prodotti{
+  margin-left: 15rem;
+  margin-top: 8rem;
   align-items: center;
   justify-content: center;
-  display: block;
   text-align: center;
+}
 
-} 
-.slider .content{
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
+.prodotti p{
+  margin-bottom: 2rem;
+  font-size: 3rem;
+}
+
+.prodotti table{
+  margin-left: auto;
+  margin-right: auto;   
+}
+
+.container {
   position: relative;
-  padding-bottom: 10rem;
-  
-}
-
-.slider .content .images{
- height: 100%;
- width: 100%;
-
-}
-
-.slider .images img{
-  height: 100%;
   width: 100%;
-
+  align-items:center;
+  justify-content:center;
 }
 
-.slider .btn-sliders{
+
+ .overlay {
   position: absolute;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-}
-
-.slider .btn-sliders span{
-  height: 15px;
-  width: 50px;
-  opacity: 0.5;
-  border: 2px solid white;
-  margin: 0 3px;
-  cursor: pointer;
-  margin-bottom: 10rem;
-
-}
-
-.slider .btn-sliders span:hover{
-  background: white;
-}
-
-.slider .content .slide{
-  position: absolute;
-  top: 40%;
-  transform: translateY(-50%);
-  width: 45px;
-  height: 45px;
-  cursor: pointer;
-  background: rgba(255, 255, 255, 0.1);
-  
-}
-.slider .content .slide:hover{
-   background: rgba(255, 255, 255, 0.2);
-}
-.slider .slide span{
-   font-size: 35px;
-   color: #4d4d4d;
-   opacity: 0.5;
-   line-height: 41px;
-   
-}
-.slider .content .right{
+  bottom: 0;
+  left: 0;
   right: 0;
+  background-color: #008CBA;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
 
 }
 
-/*foto lato*/
-.foto {
-	width:18%;
-	height:100%;
+.container:hover .overlay {
+  height: 100%;
   
 }
 
-.foto .img1{
-	width:100%;
-	height:50%;
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
-
-.foto .img2{
-	width:100%;
-	height:50%;
-}
-
-.foto .img1 img{
-  width: 100%;
-  height: 100%;
-}
-.foto .img2 img{
-  width: 100%;
-  height: 100%;
-}
-.foto .img1 figure img {
-	opacity: 1;
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
-}
-.foto .img1 figure:hover img {
-	opacity: .5;
-}
-.foto .img2 figure img {
-  opacity: 1;
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
-}
-.foto .img2 figure:hover img {
-	opacity: .5;
-}
-
-
 /*FOOTER*/
 #footer{
-	width:100%;
   margin-top: 10rem;
   background: #4d4d4d;
   color: #fff;
-  padding-top:30px;
-  padding-bottom:30px;
+  padding: 30px;
   text-align: center;
 }
-
-
