--- a/OlySmart/WebContent/CSS/Homepage.css
+++ b/OlySmart/WebContent/CSS/Homepage.css
@@ -142,70 +142,7 @@
 	width:100%;
 }
 
-#intestazione .mobile-container{
-  display: none;
-}
-
-
-/*bottone ricerca*/
-.bottone-ricerca{
-  
-  margin-left: 9rem;
-  position: absolute;
-}
-
-.search-box-avanzato:hover > .search-txt{
-  width: 240px;
-  padding: 0 6px;
-  
-
-}
-
-.search-box-avanzato:hover > .search-btn{
- background:white ;
-}
-
-.search-box-avanzato{
-  transform: translate(-50%,-50%);
-  background:#2f3640 ;
-  height: 40px;
-  border-radius: 40px;
-  padding: 8px;
-}
-
-.search-btn{
-  float: right;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background: #2f3640;
-  display: flex;
-  justify-content:center;
-  align-items:center;
-  transition: 0.4s;
-  text-decoration: none;
-}
-
-
-.search-txt{
-  border: none;
-  background: none;
-  outline: none;
-  float: left;
-  padding: 0rem;
-  color: white;
-  font-size: 16px;
-  transition: 0.4s;
-  line-height: 40px;
-  width: 0px;
-}
-
-.fa-search{
-   color:#4d4d4d;
-}
-
-
-/*prodotti piÃ¹ venduti*/
+/*prodotti più venduti*/
 #piuvenduti{
   margin-left: 2rem;
   margin-top: 8rem;
@@ -266,168 +203,26 @@
   text-align: center;
 }
 /*MENU*/
-#menu{
-  margin-top:5rem;
-  width:100%;
-  display: flex;
-  height: 500px;
-  align-items:center;
-  justify-content:center;
-}
-.sidebar{
 
- 
-  background: #d9dcdf;
-  height: 480px;
-  width: 20%;
-  z-index: 1;
-  text-align: center;
-  font-size: 30px;
-  transition: all 0.5s ease;
+#menu {
+	
+	width:100%;
+	display:flex;
+   
 }
-
-.sidebar .nav-links{
-  background: white;
-  height: 100%;
- padding-top: 10px;
- overflow: auto;
-}
-.sidebar .nav-links li{
-  list-style: none;
-  position: relative;
-  transition: all 0.4s ease;
-}
-.sidebar.close .nav-links{
-  overflow: visible;
-}
-
-.sidebar .nav-links li i{
-height: 50px;
-min-width: 78px;
-text-align: center;
-line-height: 50px;
-color:#4d4d4d;
-font-size: 20px;
-}
-
-.sidebar .nav-links li .icon-link{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-}
-
-.sidebar .nav-links li a{
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-}
-
-.sidebar .nav-links li a .link_name{
-  font-size: 18px;
-  font-weight: 400;
-  color: #4d4d4d;
-  transition: all 0.4s ease;
-}
-
-.sidebar .nav-links li .sub-menu{
-  padding: 6px 6px 14px 80px;
-  margin-top: -10px;
-  background:white;
-  /*display: none;*/
-  
-
-}
-.sidebar .nav-links li .sub-menu a{
-  color: black;
-  font-size: 20px;
-  padding: 5px 0px;
-  white-space: nowrap;
-  opacity: 0.6;
-  transition: all 0.3s ease;
-}
-.sidebar .nav-links li .sub-menu a:hover{
-  opacity: 1;
-
-}
-.sidebar .nav-links ul li:hover{
-  background:white;
-}
-.sidebar.close .nav-links li .sub-menu{
-  position: absolute;
-  left: 100%;
-  top: -10;
-  margin-top: 0;
-  border-radius: 0 6px 6px 0;
-  transition: all 0.4s ease;
-  opacity: 0;
-  pointer-events: none;
-  padding: 10px 20px;
-}
-.sidebar.close .nav-links li .sub-menu .link_name{
-  font-size: 18px;
-  opacity: 1;
-  display: block;
-}
-.sidebar .nav-links li .sub-menu .link_name{
-  display: none;
-
-}
-.sidebar.close .nav-links li:hover .sub-menu{
-top:0;
-pointer-events: auto;
-opacity: 1;
-}
-.sidebar .nav-links li:hover .sub-menu.blank{
-  top:50%;
-  transform: translateY(-50%);
-}
-.home-section{
-  position: relative;
-  left:300px;
-  width: calc(100%-300px);
-  height: 100vh;
-  transition: all 0.5s ease;
-
-}
-.sidebar.close ~.home-section{
-  left: 300px;
-  width: calc(100%-300px);
-} 
-
-.home-section .home-content{
-  height: 30px;
-  display: flex;
-  align-items: center;
-
-}
-.home-section .home-content .fa-bars ,
-  .home-section .home-content .text{
-  color: black;
-  font-size: 20px;
-
-  
-}
-.home-section .home-content .text{
-  font-size: 20px;
-  font-weight: 600;
-
-}
-.home-section .home-content .fa-bars{
-  margin:0 15px;
-}
-
-
-
 /*SLIDER*/
 .slider{
-  height: 500px;
-  width: 64%;
+	margin-top:3%;
+	margin-left:auto;
+  width: 70%;
+  height:550px;
   display: flex;
   align-items: center;
   justify-content: center;
   display: block;
   text-align: center;
+  
+  
 
 } 
 .slider .content{
@@ -435,7 +230,7 @@ opacity: 1;
   width: 100%;
   overflow: hidden;
   position: relative;
-  padding-bottom: 10rem;
+  padding-bottom: 3%;
   
 }
 
@@ -453,12 +248,10 @@ opacity: 1;
 
 .slider .btn-sliders{
   position: absolute;
-  bottom: 20px;
-  left: 50%;
+  left:50%;
   transform: translateX(-50%);
-  display: flex;
+  display:flex;
 }
-
 .slider .btn-sliders span{
   height: 15px;
   width: 50px;
@@ -466,14 +259,9 @@ opacity: 1;
   border: 2px solid white;
   margin: 0 3px;
   cursor: pointer;
-  margin-bottom: 10rem;
+  
 
 }
-
-.slider .btn-sliders span:hover{
-  background: white;
-}
-
 .slider .content .slide{
   position: absolute;
   top: 40%;
@@ -501,17 +289,21 @@ opacity: 1;
 
 /*foto lato*/
 .foto {
-	width:18%;
+	
+	margin:4% auto 0;
+	width:22.3%;
 	height:100%;
   
 }
 
 .foto .img1{
+	
 	width:100%;
 	height:50%;
 }
 
 .foto .img2{
+	
 	width:100%;
 	height:50%;
 }
@@ -539,18 +331,6 @@ opacity: 1;
 }
 .foto .img2 figure:hover img {
 	opacity: .5;
-}
-
-
-/*FOOTER*/
-#footer{
-	width:100%;
-  margin-top: 10rem;
-  background: #4d4d4d;
-  color: #fff;
-  padding-top:30px;
-  padding-bottom:30px;
-  text-align: center;
 }
 
 
