--- a/OlySmart/WebContent/CSS/Admin.css
+++ b/OlySmart/WebContent/CSS/Admin.css
@@ -85,3 +85,14 @@ width:100%;
 a{
 	color:blue;
 }
+
+.modal-body{
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        padding-top: 60px;
+}
