--- a/OlySmart/WebContent/CSS/Carrello.css
+++ b/OlySmart/WebContent/CSS/Carrello.css
@@ -1,61 +1,143 @@
-@charset "ISO-8859-2";
-.cart-page{
-    margin: 80px auto;
+@charset "ISO-8859-1";
+
+
+.Cart-Container{
+ width: 70%;
+ height: 85%;
+ background-color: #ffffff;
+ border-radius: 20px;
+ box-shadow: 0px 25px 40px #1687d933;
 }
 
-table{
-    width: 100%;
-    border-collapse: collapse;
+.Header{
+ margin: auto;
+ width: 90%;
+ height: 15%;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
 }
 
-/*DIV della pic del prodotto*/
-
-th{
-    text-align: left;
-    padding: 5px;
-    color: #fff;
-    background: #4d4d4d;
-    font-weight: normal;
+.Heading{
+ font-size: 20px;
+ font-family: 'Open Sans';
+ font-weight: 700;
+ color: #2F3841;
 }
 
-td{
-    padding: 10px 5px;
+.Action{
+ font-size: 14px;
+ font-family: 'Open Sans';
+ font-weight: 600;
+ color: #E44C4C;
+ cursor: pointer;
+ border-bottom: 1px solid #E44C4C;
 }
 
-td input{
-    width: 40px;
-    height: 30px;
-    padding: 5px;
+.Cart-Items{
+ margin: auto;
+ width: 90%;
+ height: 30%;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
 }
 
-td a{
-    color: #4d4d4d;
-    font-size: 12px;
+.image-box{
+ width: 15%;
+ text-align: center;
 }
 
-/*td img per migliorare la dimensione dell'immagine*/
-
-.total-price{
-    display: flex;
-    justify-content: flex-end;
-}
-
-.total-price table{
-    border-top: 3px solid #4d4d4d;
-    width: 100%;
-    max-width: 400px;
-}
-
-td:last-child{
-    text-align: right;
-}
-
-th:last-child{
-    text-align: right;
+.title{
+ padding-top: 5px;
+ line-height: 10px;
+ font-size: 32px;
+ font-family: 'Open Sans';
+ font-weight: 800;
+ color: #202020;
 }
 
 
-.ordine{
-	text-align:right;
-	justify-content:right;
+.counter{
+ width: 15%;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+}
+
+.button{
+ width: 40px;
+ height: 40px;
+ border-radius: 50%;
+ background-color: #d9d9d9;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ font-size: 20px;
+ font-family: 'Open Sans';
+ font-weight: 900;
+ color: #202020;
+ cursor: pointer;
+}
+
+.count{
+ font-size: 20px;
+ font-family: 'Open Sans';
+ font-weight: 900;
+ color: #202020;
+}
+
+.prices{
+ height: 100%;
+ text-align: right;
+}
+
+.amount{
+ padding-top: 20px;
+ font-size: 26px;
+ font-family: 'Open Sans';
+ font-weight: 800;
+ color: #202020;
+}
+
+.remove{
+ padding-top: 5px;
+ font-size: 14px;
+ font-family: 'Open Sans';
+ font-weight: 600;
+ color: #E44C4C;
+ cursor: pointer;
+}
+
+hr{
+ width: 66%;
+ float: right;
+ margin-right: 5%;
+}
+
+.checkout{
+ float: right;
+ margin-right: 5%;
+ width: 28%;
+}
+
+.total{
+ width: 100%;
+ display: flex;
+ justify-content: space-between;
+}
+
+.items{
+ font-size: 16px;
+ font-family: 'Open Sans';
+ font-weight: 500;
+ color: #909090;
+ line-height: 10px;
+}
+
+.total-amount{
+ font-size: 36px;
+ font-family: 'Open Sans';
+ font-weight: 900;
+ color: #202020;
 }
