--- a/OlySmart/WebContent/CSS/Laptop.css
+++ b/OlySmart/WebContent/CSS/Laptop.css
@@ -6,10 +6,6 @@
 
 }
 
-body{
-	background-color:yellow;
-}
-
 /*INTESTAZIONE*/
 #intestazione{
 	width:100%;
@@ -18,76 +14,239 @@ body{
 }
 
 #intestazione .container{
+  width:100%;
   display: flex;
-  align-items:center;
-  justify-content:space-between;
+  align-items: center;
+ 
   
 }
 #intestazione .container .testo {
-  width:50%;
-  align-items:center;
-  justify-items:center;
+  width:40%;
 }
 #intestazione .container .testo h1 {
-	width:100%;
   color: black;
-  font-size: 4.5rem;
+  font-size: 4.2rem;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   margin-bottom: 3rem;
-  margin-right:8rem;
-  text-align:center;
+
 
 }
 
 #intestazione .container .image{
-  width:25%;
+  
+  width:20%;
   
 }
 #intestazione .container .image .logo{
-  width: 100%;
+  width: 270px;
    padding:0rem;
-  height: 100%;
+  height: 200px;
    
 }
 #intestazione .container .ultimo{
-  width:25%;
+  width: 40%;
+  
+  
 }
 #intestazione .container .ultimo .accesso{
-
+  width:100%;
   display:flex;
 	align-items:center;
 	text-align:center;
 	justify-content:center;
-	margin-bottom:1rem;
+ margin-bottom:1rem;
+
+}
+#intestazione .container .ultimo .accesso .pdg{
+	width:30%;
+	
+  text-align:center;
 }
 
+#intestazione .container .ultimo .accesso .ladmin{
+	width:20%;
+
+  text-align:center;
+}
 #intestazione .container .ultimo .accesso .registra {
-	margin-right:1rem;
+	width:25%;
+	align-items:center;
+  justify-content:center;
+  text-align:center;
+  
 }
 #intestazione .container .ultimo .accesso .accedi {
-	margin-left:1rem;
+	width:25%;
+	align-items:center;
+  justify-content:center;
+  text-align:center;
+
+}
+#intestazione .container .ultimo .accesso .Myaccount{
+	width:35%;
+	height:50%;
+	align-items:center;
+  justify-content:center;
+  text-align:center;
+
+	
+}
+
+#intestazioe .container .ultimo .accesso .logout{
+	width:35%;
+    height:50%;
+	align-items:center;
+  justify-content:center;
+  text-align:center;
+	
+}
+
+
+#intestazione .container .ultimo .accesso .cartimage{
+    width:11%;
+    height:50%;
+  justify-content:center;
+  
+}
+
+#intestazione .container .ultimo .accesso .cartimage img{
+	width:100%;
 }
 
 #intestazione .container .ultimo .loghi{
-	display:block;
-  justify-content:center;
+	width:100%;
 	display:flex;
-	align-items:center;
+	
+	justify-content:center;
+	
+	
 }
 
-#intestazione .container .ultimo .loghi img{
+#intestazione .container .ultimo .loghi .imgl1{
+	width:10%;
   margin-left: 1rem;
 }
+#intestazione .container .ultimo .loghi .imgl1 img{
+	width:100%;
+}
+#intestazione .container .ultimo .loghi .imgl2{
+	width:10%;
+  margin-left: 1rem;
+}
+#intestazione .container .ultimo .loghi .imgl2 img{
+	width:100%;
+}
+#intestazione .container .ultimo .loghi .imgl3{
+	width:10%;
+  margin-left: 1rem;
+}
+#intestazione .container .ultimo .loghi .imgl3 img{
+	width:100%;
+}
 
-#intestazione .mobile-container{
+
+/*NAVBAR*/
+#navbar {
+	width:100%;
+	background:#4d4d4d;
+}
+.topnav {
+  overflow: hidden;
+  background: #4d4d4d;
+  
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+ 
+  text-decoration: none;
+  font-size: 14px;
+}
+
+
+.active {
+ width:5%;
+ padding: 14px 14px;
+  background-color: #FFDE49;
+  color: white;
+}
+.cat{
+	width:8%;
+	padding: 14px 14px;
+  background-color: #4d4d4d;
+  color:white;
+  
+  
+}
+.topnav .icon {
   display: none;
 }
 
+.dropdown {
+  width:11.5%;
+  float: left;
+  overflow: hidden;
+}
+#fdown{
+	display:none;
+}
+.imgcateg{
+	width:16px;
+	height:14px;
+}
+.dropdown .dropbtn {
+  width:100%;
+  font-size: 17px;
+  text-align:center;    
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  width:11%;
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 /*bottone ricerca*/
 .bottone-ricerca{
   
-  margin-left: 10rem;
+  margin-left: 9rem;
   position: absolute;
 }
 
@@ -108,7 +267,6 @@ body{
   height: 40px;
   border-radius: 40px;
   padding: 8px;
-  margin-left:6rem;
 }
 
 .search-btn{
@@ -142,12 +300,12 @@ body{
    color:#4d4d4d;
 }
 
-/*prodotti piÃ¹ venduti*/
+
+/*prodotti più venduti*/
 #piuvenduti{
-  margin-left: 2rem;
+  
   margin-top: 8rem;
-  align-items: center;
-  justify-content: center;
+ 
   text-align: center;
 }
 
@@ -164,12 +322,15 @@ body{
   padding-right: 2rem;
 }
 
-.container {
+#piuvenduti  .container {
   position: relative;
   width: 100%;
 }
 
-
+#piuvenduti  .container .image{
+	width:190px;
+	height:190px;
+}
 .overlay {
   position: absolute;
   bottom: 0;
@@ -190,7 +351,7 @@ body{
 
 .text {
   color: white;
-  font-size: 20px;
+  font-size: 18px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -200,168 +361,27 @@ body{
   text-align: center;
 }
 /*MENU*/
-#menu{
-  margin-top:5rem;
-  width:100%;
-  display: flex;
-  height: 500px;
-  align-items:center;
-  justify-content:center;
-}
-.sidebar{
 
- 
-  background: #d9dcdf;
-  height: 480px;
-  width: 20%;
-  z-index: 1;
-  text-align: center;
-  font-size: 30px;
-  transition: all 0.5s ease;
+#menu {
+	
+	width:100%;
+	display:flex;
+   
 }
-
-.sidebar .nav-links{
-  background: white;
-  height: 100%;
- padding-top: 10px;
- overflow: auto;
-}
-.sidebar .nav-links li{
-  list-style: none;
-  position: relative;
-  transition: all 0.4s ease;
-}
-.sidebar.close .nav-links{
-  overflow: visible;
-}
-
-.sidebar .nav-links li i{
-height: 50px;
-min-width: 78px;
-text-align: center;
-line-height: 50px;
-color:#4d4d4d;
-font-size: 20px;
-}
-
-.sidebar .nav-links li .icon-link{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-}
-
-.sidebar .nav-links li a{
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-}
-
-.sidebar .nav-links li a .link_name{
-  font-size: 18px;
-  font-weight: 400;
-  color: #4d4d4d;
-  transition: all 0.4s ease;
-}
-
-.sidebar .nav-links li .sub-menu{
-  padding: 6px 6px 14px 80px;
-  margin-top: -10px;
-  background:white;
-  /*display: none;*/
-  
-
-}
-.sidebar .nav-links li .sub-menu a{
-  color: black;
-  font-size: 20px;
-  padding: 5px 0px;
-  white-space: nowrap;
-  opacity: 0.6;
-  transition: all 0.3s ease;
-}
-.sidebar .nav-links li .sub-menu a:hover{
-  opacity: 1;
-
-}
-.sidebar .nav-links ul li:hover{
-  background:white;
-}
-.sidebar.close .nav-links li .sub-menu{
-  position: absolute;
-  left: 100%;
-  top: -10;
-  margin-top: 0;
-  border-radius: 0 6px 6px 0;
-  transition: all 0.4s ease;
-  opacity: 0;
-  pointer-events: none;
-  padding: 10px 20px;
-}
-.sidebar.close .nav-links li .sub-menu .link_name{
-  font-size: 18px;
-  opacity: 1;
-  display: block;
-}
-.sidebar .nav-links li .sub-menu .link_name{
-  display: none;
-
-}
-.sidebar.close .nav-links li:hover .sub-menu{
-top:0;
-pointer-events: auto;
-opacity: 1;
-}
-.sidebar .nav-links li:hover .sub-menu.blank{
-  top:50%;
-  transform: translateY(-50%);
-}
-.home-section{
-  position: relative;
-  left:300px;
-  width: calc(100%-300px);
-  height: 100vh;
-  transition: all 0.5s ease;
-
-}
-.sidebar.close ~.home-section{
-  left: 300px;
-  width: calc(100%-300px);
-} 
-
-.home-section .home-content{
-  height: 30px;
-  display: flex;
-  align-items: center;
-
-}
-.home-section .home-content .fa-bars ,
-  .home-section .home-content .text{
-  color: black;
-  font-size: 20px;
-
-  
-}
-.home-section .home-content .text{
-  font-size: 20px;
-  font-weight: 600;
-
-}
-.home-section .home-content .fa-bars{
-  margin:0 15px;
-}
-
-
-
 /*SLIDER*/
 .slider{
-  height: 500px;
-  width: 64%;
+	margin-top:3%;
+	
+	
+  width: 70%;
+  height:550px;
   display: flex;
   align-items: center;
   justify-content: center;
   display: block;
   text-align: center;
+  
+  
 
 } 
 .slider .content{
@@ -369,7 +389,7 @@ opacity: 1;
   width: 100%;
   overflow: hidden;
   position: relative;
-  padding-bottom: 10rem;
+  padding-bottom: 3%;
   
 }
 
@@ -387,12 +407,10 @@ opacity: 1;
 
 .slider .btn-sliders{
   position: absolute;
-  bottom: 20px;
-  left: 50%;
+  left:50%;
   transform: translateX(-50%);
-  display: flex;
+  display:flex;
 }
-
 .slider .btn-sliders span{
   height: 15px;
   width: 50px;
@@ -400,14 +418,9 @@ opacity: 1;
   border: 2px solid white;
   margin: 0 3px;
   cursor: pointer;
-  margin-bottom: 10rem;
+  
 
 }
-
-.slider .btn-sliders span:hover{
-  background: white;
-}
-
 .slider .content .slide{
   position: absolute;
   top: 40%;
@@ -435,17 +448,22 @@ opacity: 1;
 
 /*foto lato*/
 .foto {
-	width:18%;
+	
+	margin:12% auto ;
+	width:25%;
 	height:100%;
   
 }
 
 .foto .img1{
+	
 	width:100%;
 	height:50%;
+	
 }
 
 .foto .img2{
+	
 	width:100%;
 	height:50%;
 }
@@ -460,29 +478,59 @@ opacity: 1;
 }
 .foto .img1 figure img {
 	opacity: 1;
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
+	-webkit-transition: .2s ease-in-out;
+	transition: .2s ease-in-out;
 }
 .foto .img1 figure:hover img {
 	opacity: .5;
 }
 .foto .img2 figure img {
   opacity: 1;
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
+	-webkit-transition: .2s ease-in-out;
+	transition: .2s ease-in-out;
 }
 .foto .img2 figure:hover img {
 	opacity: .5;
 }
+/*PAGINA MYACCOUNT*/
+
+#menuacc{
+	display:block;
+}
+
+table {
+	width:340px;
+	height:269px;
+	margin-left:auto;
+	margin-right:auto;
+	margin-top:10%;
+	border-collapse: collapse;
+	
+}
+
+table tr td{
+	width:337px;
+	height:266px;
+}
 
 
+
+.containers .l img{
+	width:170px;
+	height:170px;
+}
+/*-------------------------------------*/
+.prodpiuvend table tr td {
+	margin-top:2rem;
+}
 /*FOOTER*/
 #footer{
 	width:100%;
   margin-top: 10rem;
   background: #4d4d4d;
   color: #fff;
-  padding: 30px;
+  padding-top:30px;
+  padding-bottom:30px;
   text-align: center;
 }
 
