--- a/OlySmart/WebContent/CSS/login.css
+++ b/OlySmart/WebContent/CSS/login.css
@@ -89,9 +89,11 @@ h1{
 
 /*Footer*/
 #footer{
+	width:100%;
     margin-top: 49.5rem;
     background: #4d4d4d;
     color: #fff;
-    padding: 30px;
+    padding-top:30px;
+  padding-bottom:30px;
     text-align: center;
   }
