--- a/OlySmart/WebContent/CSS/scrivirece.css
+++ b/OlySmart/WebContent/CSS/scrivirece.css
@@ -1,10 +1,10 @@
 @charset "ISO-8859-1";
-
 *{
-  margin: 0;
-  padding: 0;
-
+	margin:0;
+	padding:0;
 }
+
+
 
 /*INTESTAZIONE*/
 #intestazione{
@@ -58,7 +58,17 @@
  margin-bottom:1rem;
 
 }
+#intestazione .container .ultimo .accesso .pdg{
+	width:30%;
+	
+  text-align:center;
+}
 
+#intestazione .container .ultimo .accesso .ladmin{
+	width:20%;
+
+  text-align:center;
+}
 #intestazione .container .ultimo .accesso .registra {
 	width:25%;
 	align-items:center;
@@ -74,7 +84,7 @@
 
 }
 #intestazione .container .ultimo .accesso .Myaccount{
-	width:30%;
+	width:35%;
 	height:50%;
 	align-items:center;
   justify-content:center;
@@ -84,7 +94,7 @@
 }
 
 #intestazioe .container .ultimo .accesso .logout{
-	width:20%;
+	width:35%;
     height:50%;
 	align-items:center;
   justify-content:center;
@@ -92,16 +102,9 @@
 	
 }
 
-#intestazione .container .ultimo .accesso .Myorder{
-   width:30%;
-   height:50%;
-	align-items:center;
-  justify-content:center;
-  text-align:center;
-	
-}
+
 #intestazione .container .ultimo .accesso .cartimage{
-    width:10%;
+    width:11%;
     height:50%;
   justify-content:center;
   
@@ -143,60 +146,96 @@
 }
 
 
-/*CENTER*/
-#center {
-width:100%;
-display:flex;
-margin-top:3%;
+/*NAVBAR*/
+#navbar {
+	width:100%;
+	background:#4d4d4d;
 }
-
-
-#center .prodotti{
-width:100%;
-text-align:center;
-align-items:center;
-
-}
-
-.prodotti table{
-  margin-left: auto;
-  margin-right: auto;   
-}
-
-.containers {
-  position: relative;
-  width: 100%;
-  align-items:center;
-  justify-content:center;
-}
-
-
- .overlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: #008CBA;
+.topnav {
   overflow: hidden;
-  width: 100%;
-  height: 0;
-  transition: .5s ease;
-
-}
-
-.containers:hover .overlay {
-  height: 100%;
+  background: #4d4d4d;
   
 }
 
-.text {
+.topnav a {
+  float: left;
+  display: block;
   color: white;
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
   text-align: center;
+ 
+  text-decoration: none;
+  font-size: 17px;
 }
+
+
+.active {
+ width:9%;
+ padding: 14px 14px;
+  background-color: #FFDE49;
+  color: white;
+}
+.cat{
+	width:9%;
+	padding: 14px 14px;
+  background-color: #4d4d4d;
+  color:white;
+  
+  
+}
+.topnav .icon {
+  display: none;
+}
+
+.dropdown {
+  width:11%;
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  width:100%;
+  font-size: 17px;
+  text-align:center;    
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  width:11%;
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/*---------------------------------------------------------------------------------------------*/
