--- a/OlySmart/WebContent/CSS/style.css
+++ b/OlySmart/WebContent/CSS/style.css
@@ -58,7 +58,17 @@
  margin-bottom:1rem;
 
 }
+#intestazione .container .ultimo .accesso .pdg{
+	width:30%;
+	
+  text-align:center;
+}
 
+#intestazione .container .ultimo .accesso .ladmin{
+	width:20%;
+
+  text-align:center;
+}
 #intestazione .container .ultimo .accesso .registra {
 	width:25%;
 	align-items:center;
@@ -73,15 +83,18 @@
   text-align:center;
 
 }
-#intestazione .container .ultimo .accesso .Myaccount {
-	width:30%;
+#intestazione .container .ultimo .accesso .Myaccount{
+	width:35%;
 	height:50%;
 	align-items:center;
   justify-content:center;
   text-align:center;
+
+	
 }
+
 #intestazioe .container .ultimo .accesso .logout{
-	width:20%;
+	width:35%;
     height:50%;
 	align-items:center;
   justify-content:center;
@@ -89,16 +102,9 @@
 	
 }
 
-#intestazione .container .ultimo .accesso .Myorder{
-   width:30%;
-   height:50%;
-	align-items:center;
-  justify-content:center;
-  text-align:center;
-	
-}
+
 #intestazione .container .ultimo .accesso .cartimage{
-    width:10%;
+    width:11%;
     height:50%;
   justify-content:center;
   
@@ -138,6 +144,157 @@
 #intestazione .container .ultimo .loghi .imgl3 img{
 	width:100%;
 }
+
+
+/*NAVBAR*/
+#navbar {
+	width:100%;
+	background:#4d4d4d;
+}
+.topnav {
+  overflow: hidden;
+  background: #4d4d4d;
+  
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+ 
+  text-decoration: none;
+  font-size: 17px;
+}
+
+
+.active {
+ width:9%;
+ padding: 14px 14px;
+  background-color: #FFDE49;
+  color: white;
+}
+.cat{
+	width:9%;
+	padding: 14px 14px;
+  background-color: #4d4d4d;
+  color:white;
+  
+  
+}
+.topnav .icon {
+  display: none;
+}
+
+.dropdown {
+  width:11%;
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  width:100%;
+  font-size: 17px;
+  text-align:center;    
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  width:11%;
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/*bottone ricerca*/
+.bottone-ricerca{
+  
+  margin-left: 9rem;
+  position: absolute;
+}
+
+.search-box-avanzato:hover > .search-txt{
+  width: 240px;
+  padding: 0 6px;
+  
+
+}
+
+.search-box-avanzato:hover > .search-btn{
+ background:white ;
+}
+
+.search-box-avanzato{
+  transform: translate(-50%,-50%);
+  background:#2f3640 ;
+  height: 40px;
+  border-radius: 40px;
+  padding: 8px;
+}
+
+.search-btn{
+  float: right;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #2f3640;
+  display: flex;
+  justify-content:center;
+  align-items:center;
+  transition: 0.4s;
+  text-decoration: none;
+}
+
+
+.search-txt{
+  border: none;
+  background: none;
+  outline: none;
+  float: left;
+  padding: 0rem;
+  color: white;
+  font-size: 16px;
+  transition: 0.4s;
+  line-height: 40px;
+  width: 0px;
+}
+
+.fa-search{
+   color:#4d4d4d;
+}
+
 
 /*prodotti più venduti*/
 #piuvenduti{
@@ -328,6 +485,18 @@
 }
 .foto .img2 figure:hover img {
 	opacity: .5;
+}
+
+
+/*FOOTER*/
+#footer{
+	width:100%;
+  margin-top: 10rem;
+  background: #4d4d4d;
+  color: #fff;
+  padding-top:30px;
+  padding-bottom:30px;
+  text-align: center;
 }
 
 
